# amalitech-de-dem05-lab-1

./: .gitignore  README.md  main.ipynb  pyproject.toml
docs/: appendix.typ  final_report.typ  generate_appendix.py
tests/: caching_movie_test.py  cleaning_test.py  conftest.py  fetch_movie_test.py
utils/: __init__.py  api.py  clearner.py  helpers.py  schema.py  types.py
