[project]
name = "amalitech-de-dem05-labs"
version = "0.1.0"
description = "Amalitech Data Engineering Labs - A collection of data engineering exercises and projects for learning and practice."
authors = [
    { name = "Hubert Apana",  email = "kwakuhubert@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28.1",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pyspark>=4.1.1",
    "pytest>=9.0.3",
    "pyviz-comms",
    "respx>=0.23.1",
    "seaborn>=0.13.2",
    "tenacity>=9.1.4",
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "respx>=0.22.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"